  - Added unistd.h and corrected DrawPixel declaration
    to fix compile/build errors.

  - Removed un-needed -k command line option. It
    was buggy and causing compiler warnings.


========= openssn-1.2 Jun 3, 2012 ===========

  - Applied makefile patch from Vincent.

  - We no longer create font and largeont files in
    the directory "./data/" OpenSSN used to try to
    save our fonts in case the font files were missing,
    but this is no longer required and is probably
    improper behaviour. This fix closes Debian bug
    #675744.
    Thanks to Guillem for pointing out the error.



========== openssn-1.1 Nov 7, 2011 ============

  - Updated makefile to support more data locations.

  - Helicopters will guard friendly ships if they cannot
    hear enemies.

  - Subs attack a little slower to avoid alerting everyone.

  - Helicopters no longer rapid-fire torpedoes.

  - Subs will now stay below a thermal if they hear helicopters.

  - Helicopters will shoot at enemy subs.

  - Helicopters should now track enemy submarines.

  - Helicopter now moves randomly when searching for
    targets and it has nothing better to do.

  - Added debug compiler flag DEBUG_HELICOPTER.

  - Removed "ships" index variable. With linked lists we
    should not need it.

  - Added helicopter class.

======== openssn-1.0 Oct 22, 2011 ============

  - Game now recognizes OPTDIR variable, for when OpenSSN
    is installed in /opt/openssn/

  - Corrected/improved makefile.
    Patch provided by Vincent.

  - Added optinstall option for Makefile, installs
    OpenSSN under /opt/openssn

========== openssn-0.9 September 26, 2011  =========

  - Added sub vs sub mission.

  - Stack holding ESM data is now of dynamic size. Should no
    longer crash when faced with many surface targets.

  - Updated makefile. Added manual page, desktop entry and icon.
    Files and updates provided by Vincent on behave of 
    the Debian project.
