@@ -58,7 +58,7 @@ SDL_mixer
 Assuming the above libraries are installed, it should be possible to
 build OpenSSN with the following commands
 
-tar zxf openssn-1.2.tar.gz
+tar zxf openssn-1.4.tar.gz
 cd openssn
 make
 
