@@ -1,3 +1,11 @@
+  - Fixed compile error on Windows, missing header include.
+
+======= openssn-1.4 ==================
+
+  - Added new mission, provided by David Luckie.
+
+====== openssn-1.3 ===================
+
   - Added unistd.h and corrected DrawPixel declaration
     to fix compile/build errors.
 
